se elimina columna before en log y se cambia e nombre after por jerarquia

--- a/src/app/componentes/rkmain/rkc/rkc.component.html
+++ b/src/app/componentes/rkmain/rkc/rkc.component.html
@@ -377,8 +377,8 @@
                                 <th style="text-align: left; ">Operacion</th>
                                 <th style="text-align: left; ">Item</th>
                                 <!-- <th style="text-align: left; ">Ruta</th> -->
-                                <th style="text-align: left; width: 400px; ">Before</th>
-                                <th style="text-align: left; width: 400px; ">After</th>
+                                <!-- <th style="text-align: left; width: 400px; ">Before</th> -->
+                                <th style="text-align: left; width: 400px; ">Jerarquia</th>
                                 <th style="text-align: left; ">Versión</th>
                                 <!-- <th style="text-align: left; ">Consecuencia</th>
                                 <th style="text-align: left; ">Control</th>
@@ -393,7 +393,7 @@
                                 <td class="mdl-data-table__cell--non-numeric ">{{item.ultimaUsuarioModifico}}</td>
                                 <td class="mdl-data-table__cell--non-numeric ">{{item.operacion}}</td>
                                 <td class="mdl-data-table__cell--non-numeric ">{{item.item}}</td>
-                                <td class="mdl-data-table__cell--non-numeric ">{{item.before}}</td>
+                                <!-- <td class="mdl-data-table__cell--non-numeric ">{{item.before}}</td> -->
                                 <td class="mdl-data-table__cell--non-numeric ">{{item.after}}</td>
                                 <td class="mdl-data-table__cell--non-numeric ">{{item.version}}</td>
                                 <!-- <td class="mdl-data-table__cell--non-numeric ">{{item.tarea}}</td>
