Modificacion en Read_Criticidad:se añade el tipo de dimension para realizar el calculo

--- a/src/app/rkmain/rkhelp/rkhelp.component.html
+++ b/src/app/rkmain/rkhelp/rkhelp.component.html
@@ -41,7 +41,7 @@
                     <td>
                         <a href="{{item.ELEC_REF}}" target="_blank">
                             <button class="btn btn-sm btn-light btn-round">
-                            <img   class="img-circle" [src]="item.icono" style="width: 30px; height: 30px;">
+                            <img   class="img-circle" src="assets/images/link.png" style="width: 30px; height: 30px;">
                         </button>
                         </a>
                     </td>
