--- a/src/assets/estilos.css
+++ b/src/assets/estilos.css
@@ -22,3 +22,18 @@
     max-width: 100%;
     overflow-x: scroll;
 }
+
+.custom-class {
+    top: 0;
+    z-index: 2002;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000ba;
+    border-radius: 3px;
+}
