--- a/Matrizapp/src/app/componentes/rkmain/rkmain.component.scss
+++ b/Matrizapp/src/app/componentes/rkmain/rkmain.component.scss
@@ -30,7 +30,6 @@
       overflow-x: auto;
       overflow-y: scroll;
       overflow: scroll;
-
   }
   
   .example-tree-invisible {
@@ -61,11 +60,9 @@
       font-size: 11px;
       font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   }
-
+  
   //colocar mouse como cruz para el arrastre
-
   // @import '~@angular/material/theming';
-
   // .mat-tree-node {
   //   background-color: white;
   //   user-select: none;
@@ -85,7 +82,6 @@
   // .cdk-drag-animating {
   //   transition: transform 200ms cubic-bezier(0, 0, 0.2, 1);
   // }
-  
   mat-tree-node {
       padding-left: 0px!important;
   }
@@ -202,6 +198,18 @@
   
   .background-highlight {
       background-color: #cff5e9 !important;
+  }
+  
+  .seleccionado:visited {
+      background-color: #cfd6f5 !important;
+  }
+  
+  .seleccionado:visited::after {
+      background-color: #cfd6f5 !important;
+  }
+  
+  .seleccionado:visited::after {
+      background-color: #d1f312 !important;
   }
   
   .card .card-content {
