--- a/Matrizapp/src/app/componentes/rkmain/rkc/rkc.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkc/rkc.component.html
@@ -366,32 +366,228 @@
             <!-- checkList -->
             <mat-tab label="CheckList">
                 <div class="box box-default table-box table-responsive mdl-shadow--2dp " style="height: 500px; ">
+                    <div class="lds-spinner div_centrado" *ngIf="loading">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <table class="mdl-data-table table-bordered table-striped cf no-margin ">
                         <thead>
 
                             <tr>
-                                <th>
-                                    <mat-slide-toggle [(ngModel)]="masterSelected" (change)="checkUncheckAll()">Validar</mat-slide-toggle>
+                                <!-- <th style="text-align: left; height: 30px;"></th> -->
+
+                                <th class="mdl-data-table__cell--non-numeric"></th>
+                                <th class="mdl-data-table__cell--non-numeric" *ngIf="modificados > 0">
+                                    <button mat-icon-button>
+                                        <mat-icon (click)="actulizarTodo()" style="cursor: pointer;">save</mat-icon>
+                                    </button>
                                 </th>
-                                <th>Codigo</th>
-                                <th>Tipo</th>
-                                <th>Descripcion</th>
-                                <th>Validacion</th>
-                                <th>Comentario</th>
+                                <th class="mdl-data-table__cell--non-numeric" *ngIf="modificados == 0">
+                                    <button mat-icon-button disabled id="SinPermisos">
+                                        <mat-icon  style="cursor: no-drop;">save</mat-icon>
+                                    </button>
+                                </th>
+
+                                <th class="mdl-data-table__cell--non-numeric">
+
+                                    <ng-container *ngIf="checklistEllipse.length == 0  && !habilitarPaste">
+                                        <button class="btn btn-sm btn-light btn-round" (click)="guardarCheckListEllipse()" [disabled]=deshabilitado>
+                                            <img
+                                            class="img-circle"
+                                            [src]= rutaImgAdd
+                                            title="Copiar Jerarquia"
+                                            style="width: 15px; height: 15px"
+                                          />
+                                        </button>
+                                    </ng-container>
+
+                                    <ng-container *ngIf="checklistEllipse.length >= 1 && !habilitarPaste">
+                                        <button class="btn btn-sm btn-light btn-round" (click)="guardarCheckListEllipse()" [disabled]=deshabilitado>
+                                            <img
+                                            class="img-circle"
+                                            [src]= rutaImgAdd
+                                            title="Copiar Jerarquia"
+                                            style="width: 15px; height: 15px"
+                                          />
+                                        </button>
+                                        <button class="btn btn-sm btn-light btn-round" (click)="CopiarCheckList()">
+                                            <img
+                                            class="img-circle"
+                                            src="assets/images/copy.png"
+                                            title="Copiar Jerarquia"
+                                            style="width: 15px; height: 15px"
+                                          />
+                                        </button>
+                                    </ng-container>
+
+                                    <ng-container *ngIf="(checklistEllipse.length >= 0 && habilitarPaste ) && (!valorChckCopiado) || (checklistEllipse.length == 0 && habilitarPaste ) && (!valorChckCopiado )">
+                                        <button class="btn btn-sm btn-light btn-round" (click)="guardarCheckListEllipse()" [disabled]=deshabilitado>
+                                            <img
+                                            class="img-circle"
+                                            [src]= rutaImgAdd
+                                            title="Copiar Jerarquia"
+                                            style="width: 15px; height: 15px"
+                                          />
+                                        </button>
+                                        <button class="btn btn-sm btn-light btn-round" (click)="pegarCheck()" [disabled]=deshabilitado>
+                                            <img
+                                            class="img-circle"
+                                            [src]= rutaImgPaste
+                                            title="Copiar Jerarquia"
+                                            style="width: 15px; height: 15px"
+                                          />
+                                        </button>
+                                    </ng-container>
+
+
+                                    <ng-container *ngIf="valorChckCopiado && habilitarPaste">
+                                        <button mat-icon-button (click)="limpiarCopiado()">
+                                            <mat-icon color="primary" >undo</mat-icon>
+
+                                        </button>
+                                    </ng-container>
+
+
+
+                                </th>
+
+
+
+
+                                <th class="text-center">Codigo</th>
+                                <th class="text-center">Tipo</th>
+                                <th class="text-center">Descripcion</th>
+                                <th>
+                                    <!-- <mat-slide-toggle [(ngModel)]="masterSelected" size="small" (change)="checkUncheckAll()">Validar</mat-slide-toggle> -->
+                                    Aplica
+                                </th>
+
+                                <th colspan="2" class="text-center">Comentario</th>
                             </tr>
 
                         </thead>
 
                         <tbody>
-                            <tr *ngFor="let chk of checklist">
-                                <td class="mdl-data-table__cell--non-numeric" style="text-align: center !important;">
-                                    <mat-slide-toggle [(ngModel)]="chk.check"></mat-slide-toggle>
+                            <tr *ngFor="let chk of checklistEllipse ; let indice = index">
+                                <td>{{indice+1}}</td>
+                                <td *ngIf="!chk.modify" class="mdl-data-table__cell--non-numeric">
+                                    <button mat-icon-button (click)="actualizarCheck(chk.checkCode,chk.checkComment,chk.checkValidation)" style="text-align: center !important; cursor:pointer;" id="SinPermisos" disabled>
+                                    <mat-icon class="material-icons" >
+
+                                        save
+                                    </mat-icon>
+                                    
+                                   </button>
                                 </td>
-                                <td class="mdl-data-table__cell--non-numeric">{{chk.table_code}}</td>
-                                <td class="mdl-data-table__cell--non-numeric"></td>
-                                <td class="mdl-data-table__cell--non-numeric">{{chk.table_desc}}</td>
-                                <td class="mdl-data-table__cell--non-numeric">{{chk.check == true ? 'Y' : 'N'}}</td>
-                                <td class="mdl-data-table__cell--non-numeric"><input type="text">{{chk.comentario}}</td>
+
+                                <td *ngIf="chk.modify" class="mdl-data-table__cell--non-numeric">
+
+                                    <button mat-icon-button (click)="actualizarCheck(chk.checkCode,chk.checkComment,chk.checkValidation)" style="text-align: center !important; cursor:pointer;">
+                                        <mat-icon class="material-icons" >
+    
+                                            save
+                                        </mat-icon>
+
+                                    </button>
+                                </td>
+                                <td>
+
+                                    <div [ngSwitch]="actividadModel.CanAdd ">
+
+                                        <div *ngSwitchCase=" 'true' ">
+
+                                            <ng-template [ngIf]="actividadModel.Creador ==='true'" [ngIfElse]='NoPermitido'>
+
+                                                <ng-template [ngIf]="actividadModel.actividadStatusId ==='001' || actividadModel.actividadStatusId ==='002'|| actividadModel.actividadStatusId ==='008'" [ngIfElse]='opcion2'>
+
+                                                    <button *ngIf="chk.statusId ==='007'" class="btn btn-sm btn-light btn-round" (click)="eliminarCheck(chk.checkCode)" disabled>
+                                                            <img class="img-circle" src="assets/images/Delete_Disabled.png" style="width: 10px; height: 10px;">
+                                                        </button>
+
+                                                    <button *ngIf="chk.statusId ==='004'" class="btn btn-sm btn-light btn-round" (click)="eliminarCheck(chk.checkCode)" disabled>
+                                                            <img class="img-circle" src="assets/images/Delete_Disabled.png" style="width: 10px; height: 10px;">
+                                                        </button>
+
+                                                    <button *ngIf="chk.statusId ==='001' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'Y'
+                                                        ||chk.statusId ==='006' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'Y'
+                                                        ||chk.statusId ==='002' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'Y'
+                                                        ||chk.statusId ==='008' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'Y'
+                                                        ||chk.statusId ==='000' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'Y'" class="btn btn-sm btn-light btn-round" (click)="eliminarCheck(chk.checkCode)">
+                                                <img class="img-circle" src="assets/images/Delete.png" style="width: 10px; height: 10px;">
+                                            </button>
+                                                    <button *ngIf="chk.statusId ==='001' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'Y'
+                                                        ||chk.statusId ==='006' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'Y'
+                                                        ||chk.statusId ==='002' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'Y'
+                                                        ||chk.statusId ==='008' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'Y'
+                                                        ||chk.statusId ==='000' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'Y'" class="btn btn-sm btn-light btn-round" (click)="eliminarCheck(chk.checkCode)" disabled>
+                                                <img class="img-circle" src="assets/images/Delete_Disabled.png" style="width: 10px; height: 10px;">
+                                            </button>
+                                                    <button *ngIf="chk.statusId ==='001' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'N'
+                                                        ||chk.statusId ==='006' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'N'
+                                                        ||chk.statusId ==='002' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'N'
+                                                        ||chk.statusId ==='008' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'N'
+                                                        ||chk.statusId ==='000' && chk.pendingDelete ==='N' && chk.DeleteIcon === 'N'" class="btn btn-sm btn-light btn-round" (click)="eliminarCheck(chk.checkCode)" disabled>
+                                                <img class="img-circle" src="assets/images/Delete_Disabled.png" style="width: 10px; height: 10px;">
+                                            </button>
+                                                    <button *ngIf="chk.statusId ==='001' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'N'
+                                                        ||chk.statusId ==='006' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'N'
+                                                        ||chk.statusId ==='002' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'N'
+                                                        ||chk.statusId ==='008' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'N'
+                                                        ||chk.statusId ==='000' && chk.pendingDelete ==='Y' && chk.DeleteIcon === 'N'" class="btn btn-sm btn-light btn-round" (click)="eliminarCheck(chk.checkCode)" disabled>
+                                                <img class="img-circle" src="assets/images/Delete_Disabled.png" style="width: 10px; height: 10px;">
+                                            </button>
+
+
+                                                </ng-template>
+
+                                                <ng-template #opcion2>
+                                                    <button class="btn btn-sm btn-light btn-round " (click)="eliminarCheck(chk.checkCode) " id="SinPermisos " disabled>
+                                                        <img class="img-circle " src="assets/images/Delete_Disabled.png " style="width: 10px; height: 10px; ">
+                                                    </button>
+                                                </ng-template>
+
+
+                                            </ng-template>
+
+                                            <ng-template #NoPermitido>
+
+                                                <button class="btn btn-sm btn-light btn-round " (click)="eliminarCheck(chk.checkCode) " id="SinPermisos " disabled>
+                                                    <img class="img-circle " src="assets/images/Delete_Disabled.png " style="width: 10px; height: 10px; ">
+                                                </button>
+
+                                            </ng-template>
+
+                                        </div>
+                                        <div *ngSwitchCase=" 'false' ">
+                                            <button class="btn btn-sm btn-light btn-round " (click)="eliminarCheck(chk.checkCode) " id="SinPermisos " disabled>
+                            <img class="img-circle " src="assets/images/Delete_Disabled.png " style="width: 10px; height: 10px; ">
+                        </button>
+                                        </div>
+                                    </div>
+
+                                </td>
+
+                                <td class="mdl-data-table__cell--non-numeric text-center">{{chk.checkCode}}</td>
+                                <td class="mdl-data-table__cell--non-numeric">{{chk.checkType}}</td>
+                                <td class="mdl-data-table__cell--non-numeric">{{chk.checkDescription}}</td>
+                                <td class="mdl-data-table__cell--non-numeric" style="text-align: center !important;">
+                                    <!-- <label class="example-margin">No</label> -->
+                                    <mat-slide-toggle [(ngModel)]="chk.check" (change)="cambiarValidation(indice)" size="small">{{chk.check === true ? 'Si' : 'No'}}</mat-slide-toggle>
+                                    <!-- <label class="example-margin">Si</label> -->
+
+                                </td>
+                                <!-- <td class="mdl-data-table__cell--non-numeric" style="text-align: center !important;">{{chk.checkValidation === 'Y' ? 'Si' : 'No'}}</td> -->
+                                <td class="mdl-data-table__cell--non-numeric"><textarea id="comentario" [(ngModel)]="chk.checkComment">{{chk.checkComment}}</textarea></td>
                             </tr>
                         </tbody>
 
